--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ section{
     margin: 0 35%;
     text-align: center;
 }
+@media (max-width: 600px) {
+    section{
+        margin: 0;
+    }
+}
+
 #box{
     display: flex;
     flex-wrap: wrap;
