--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section{
     margin: 0 35%;
     text-align: center;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
     section{
         margin: 0;
     }
@@ -66,6 +66,7 @@ h2 {
 #compteur {
     font-size: 30px;
     padding: 20px;
+    margin: 0px;
 }
 
 .apparition{
